--- a/contact.html
+++ b/contact.html
@@ -111,7 +111,7 @@
 			<section class="contact-area primary-bg">
 				<div class="container">
 					<div class="row justify-content-between">
-						<div class="col-12 col-lg-4 order-last order-md-first">
+						<div class="col-12 col-lg-4 order-first">
 							<div class="contact-info">
 								<h3>Get in touch</h3>
 								<p>Let's talk to explore ways of collaboration and transform your vision into a remarkable reality.</p>
@@ -140,7 +140,8 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-12 col-lg-7 order-first order-md-last mt-sm-4 mt-lg-0">
+						<div class="spacer-24-mobile"></div>
+						<div class="col-12 col-lg-7 order-last mt-sm-4 mt-lg-0">
 							<form id="contact-form" class="contact-form">
 								<div class="form-floating mb-3">
 									<input type="text" class="form-control" id="name" placeholder="Name" required>
@@ -166,7 +167,7 @@
 									<textarea class="form-control" id="message" placeholder="Leave a comment here" style="height: 100px" maxlength="4000" required></textarea>
 									<label for="message">Message</label>
 								</div>
-								<button type="submit" class="btn magnetic-button">Submit message <i class="icon bi bi-arrow-right ms-1"></i><span></span></button>
+								<button type="submit" id="btn-mobile" class="btn magnetic-button">Submit message <i class="icon bi bi-arrow-right ms-1"></i><span></span></button>
 							</form>
 							<p class="form-message"></p>
 						</div>
