--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
 								<!-- Content -->
 								<div class="content d-flex flex-column flex-md-row justify-content-md-between">
 									<div class="hero-button order-last order-md-first mt-4 mt-md-0">
-										<a class="btn magnetic-button" href="contact">Get in touch <i class="icon bi bi-arrow-right ms-1"></i><span></span></a>
+										<a id="btn-mobile" class="btn magnetic-button" href="contact">Get in touch <i class="icon bi bi-arrow-right ms-1"></i><span></span></a>
+
 									</div>
 									<p class="sub-title order-first order-md-last">I am a results-driven UX Designer with a strong focus on driving meaningful change. With a keen eye for detail and a deep understanding of user-centric design principles, I facilitate positive change and deliver impactful solutions.</p>
 								</div>
@@ -135,7 +136,7 @@
 							<!-- Intro -->
 							<div class="intro d-flex justify-content-between align-items-center">
 								<h3 class="title">Projects</h3>
-								<a id="btn-outline-mobile" class="btn btn-outline content-btn swap-icon" href="projects">View all <i class="icon bi bi-arrow-right-short"></i></a>
+								<button class="btn btn-outline content-btn swap-icon" onclick="window.location.href='projects';">View all <i class="icon bi bi-arrow-right-short"></i><span></span></button>
 							</div>
 						</div>
 					</div>
