--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 							<!-- Intro -->
 							<div class="intro d-flex justify-content-between align-items-center">
 								<h3 class="title">Projects</h3>
-								<button class="btn btn-outline content-btn swap-icon" onclick="window.location.href='projects';">View all <i class="icon bi bi-arrow-right-short"></i><span></span></button>
+								<button class="btn-outline-v2" onclick="window.location.href='projects';">View all <i class="icon bi bi-arrow-right ms-1"></i><span></span></button>
 							</div>
 						</div>
 					</div>
@@ -239,7 +239,7 @@
 
 							<div class="services_wrapper">
 								<p class="sub-title">Transforming ideas into digital realities by blending strategic insights with innovative design, helping brands thrive in a rapidly evolving digital landscape.</p>
-								<a id="btn-outline-mobile" class="btn magnetic-button btn-outline services_wrapper_button" href="about">About me <i class="icon bi bi-arrow-right ms-1"></i><span></span></a>
+								<button class="btn-outline-v2" onclick="window.location.href='about';">About me <i class="icon bi bi-arrow-right ms-1"></i><span></span></button>
 							</div>
 						</div>
 					</div>
