--- a/index.html
+++ b/index.html
@@ -122,8 +122,12 @@
 					</div>
 				</div>
 				<div class="hero-bg">
-					<img class="circle-1" src="assets/img/content/hero-bg-1.svg" alt="">
-					<img class="circle-2" src="assets/img/content/hero-bg-2.svg" alt="">
+					<svg xmlns="https://www.w3.org/2000/svg" class="circle-1" viewBox="0 0 2000 2000">
+						<circle cx="800" cy="1000" r="800" fill="none" stroke="#efefef" stroke-miterlimit="10" stroke-width="2"/><circle cx="1000" cy="1000" r="1000" fill="none" stroke="#efefef" stroke-miterlimit="10" stroke-width="2"/>
+					</svg>
+					<svg xmlns="https://www.w3.org/2000/svg" class="circle-2" viewBox="0 0 2000 2000">
+						<circle cx="1000" cy="1000" r="200" fill="none" stroke="#efefef" stroke-miterlimit="10" stroke-width="2"/><circle cx="1000" cy="1000" r="600" fill="none" stroke="#efefef" stroke-miterlimit="10" stroke-width="2"/><circle cx="800" cy="1000" r="400" fill="none" stroke="#efefef" stroke-miterlimit="10" stroke-width="2"/>
+					</svg>
 				</div>
 			</section>
 			<!-- ***** Hero Area End ***** -->
