--- a/projects/xapp.html
+++ b/projects/xapp.html
@@ -170,37 +170,6 @@
 				</div>
 			</section>
 
-			<section class="awards skills sticky">
-				<div class="container">
-					<div class="row justify-content-between">
-						<div class="col-12 col-lg-3">
-							<!-- Intro -->
-							<div class="intro">
-								<h3 class="title">Overcoming Roadblocks</h3>
-							</div>
-						</div>
-						<div class="col-12 col-lg-8">
-							<div class="row items">
-								<!-- Item -->
-								<p class="mt-3">After all the research made there was one big issue that stood out: accounts creations. People are used to entering an email and a password in order to create an account on a web app. But this could not be the case with xLending because of its anonymous and decentralized nature. So our idea was to have visitors use their crypto wallet as the way to sign in. But here came the main problem: one account was supposed to support multiple addresses and networks, and technically there were 5 different operations, on different crypto wallets, that the users would have to take in order to just change the network or address used by their xLending account.
-								<br><br>
-								And this is where we reinvented how you use a decentralized app: <b>we store connected address's credentials locally on the user's device and use them to automatically sign connection requests</b>, so the user only has to sign the request on the new address. This new flow reduced the cross-chain process <b>from 5 screens to just 1</b>.
-								</p>
-								
-							</div>
-						</div>
-					</div>
-
-					<div class="row portfolio-content items">
-						<div class="col-12">
-							<div class="reveal-img item">
-								<img src="../assets/img/projects/xapp/xapp5.jpg" alt="">
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-
 			<section class="awards skills sticky primary-bg">
 				<div class="container">
 					<div class="row justify-content-between">
@@ -230,6 +199,37 @@
 						<div class="col-12">
 							<div class="reveal-img item">
 								<img src="../assets/img/projects/xapp/xapp6.jpg" alt="">
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="awards skills sticky">
+				<div class="container">
+					<div class="row justify-content-between">
+						<div class="col-12 col-lg-3">
+							<!-- Intro -->
+							<div class="intro">
+								<h3 class="title">Overcoming Roadblocks</h3>
+							</div>
+						</div>
+						<div class="col-12 col-lg-8">
+							<div class="row items">
+								<!-- Item -->
+								<p class="mt-3">The usability testing made before the handoff indicated one big issue with our user flow: accounts creations. People are used to entering an email and a password in order to create an account on a web app. But this could not be the case with xLending because of its anonymous and decentralized nature. So our idea was to have visitors use their crypto wallet as the way to sign in. But here came the main problem: one account was supposed to support multiple addresses and networks, and technically there were 5 different operations, on different crypto wallets, that the users would have to take in order to just change the network or address used by their xLending account.
+								<br><br>
+								And this is where we reinvented how you use a decentralized app: <b>we store connected address's credentials locally on the user's device and use them to automatically sign connection requests</b>, so the user only has to sign the request on the new address. This new flow reduced the cross-chain process <b>from 5 screens to just 1</b>.
+								</p>
+								
+							</div>
+						</div>
+					</div>
+
+					<div class="row portfolio-content items">
+						<div class="col-12">
+							<div class="reveal-img item">
+								<img src="../assets/img/projects/xapp/xapp5.jpg" alt="">
 							</div>
 						</div>
 					</div>
